Correction for the documents import, now each folder inside the collection folder counts as one archivo, also updated front, the scrollbar now works with ctrl + wheel, and only displaying the corresponding documents when importing

--- a/src/components/styles/tableScrollbar.css
+++ b/src/components/styles/tableScrollbar.css
@@ -3,7 +3,7 @@
   bottom: 35px;
   left: 50%;
   transform: translateX(-50%);
-  width: 50%;
+  width: 90%;
   height: 16px;
   overflow-x: auto;
   background: rgba(0, 0, 0, 0.1);
